--- a/op_rewards_tracking/op_incentive_program_summary.ipynb
+++ b/op_rewards_tracking/op_incentive_program_summary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1299,9 +1299,9 @@
        "      <td>7,000,000.00</td>\n",
        "      <td>5,054,767.00</td>\n",
        "      <td>8,045.35</td>\n",
-       "      <td>0.5756</td>\n",
+       "      <td>0.58</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1309,9 +1309,9 @@
        "      <td>1,000,000.00</td>\n",
        "      <td>150,001.00</td>\n",
        "      <td>5,666.34</td>\n",
-       "      <td>13.7880</td>\n",
+       "      <td>13.79</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1319,9 +1319,9 @@
        "      <td>900,000.00</td>\n",
        "      <td>672,632.00</td>\n",
        "      <td>4,781.95</td>\n",
-       "      <td>2.5949</td>\n",
+       "      <td>2.59</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1329,9 +1329,9 @@
        "      <td>1,100,000.00</td>\n",
        "      <td>791,082.00</td>\n",
        "      <td>4,110.26</td>\n",
-       "      <td>1.8964</td>\n",
+       "      <td>1.90</td>\n",
        "      <td>1,583.82</td>\n",
-       "      <td>0.7308</td>\n",
+       "      <td>0.73</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1339,9 +1339,9 @@
        "      <td>9,000,000.00</td>\n",
        "      <td>4,919,425.00</td>\n",
        "      <td>4,092.16</td>\n",
-       "      <td>0.3036</td>\n",
+       "      <td>0.30</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1349,9 +1349,9 @@
        "      <td>5,000,000.00</td>\n",
        "      <td>4,820,781.00</td>\n",
        "      <td>3,122.79</td>\n",
-       "      <td>0.2364</td>\n",
+       "      <td>0.24</td>\n",
        "      <td>4,744.49</td>\n",
-       "      <td>0.3592</td>\n",
+       "      <td>0.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1359,9 +1359,9 @@
        "      <td>1,000,000.00</td>\n",
        "      <td>152,602.00</td>\n",
        "      <td>3,003.30</td>\n",
-       "      <td>7.1834</td>\n",
+       "      <td>7.18</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1369,9 +1369,9 @@
        "      <td>500,000.00</td>\n",
        "      <td>164,703.00</td>\n",
        "      <td>2,297.19</td>\n",
-       "      <td>3.9589</td>\n",
+       "      <td>3.96</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1379,9 +1379,9 @@
        "      <td>300,000.00</td>\n",
        "      <td>300,000.00</td>\n",
        "      <td>2,100.50</td>\n",
-       "      <td>2.5556</td>\n",
+       "      <td>2.56</td>\n",
        "      <td>390.16</td>\n",
-       "      <td>0.4747</td>\n",
+       "      <td>0.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -1389,9 +1389,9 @@
        "      <td>1,000,000.00</td>\n",
        "      <td>842,488.00</td>\n",
        "      <td>1,910.07</td>\n",
-       "      <td>0.8275</td>\n",
+       "      <td>0.83</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1410,29 +1410,29 @@
        "8          1inch      300,000.00       300,000.00                 2,100.50   \n",
        "9   PoolTogether    1,000,000.00       842,488.00                 1,910.07   \n",
        "\n",
-       "  incremental_txs_annualized_per_op  incremental_txs_per_day_after  \\\n",
-       "0                            0.5756                            NaN   \n",
-       "1                           13.7880                            NaN   \n",
-       "2                            2.5949                            NaN   \n",
-       "3                            1.8964                       1,583.82   \n",
-       "4                            0.3036                            NaN   \n",
-       "5                            0.2364                       4,744.49   \n",
-       "6                            7.1834                            NaN   \n",
-       "7                            3.9589                            NaN   \n",
-       "8                            2.5556                         390.16   \n",
-       "9                            0.8275                            NaN   \n",
+       "   incremental_txs_annualized_per_op  incremental_txs_per_day_after  \\\n",
+       "0                               0.58                            NaN   \n",
+       "1                              13.79                            NaN   \n",
+       "2                               2.59                            NaN   \n",
+       "3                               1.90                       1,583.82   \n",
+       "4                               0.30                            NaN   \n",
+       "5                               0.24                       4,744.49   \n",
+       "6                               7.18                            NaN   \n",
+       "7                               3.96                            NaN   \n",
+       "8                               2.56                         390.16   \n",
+       "9                               0.83                            NaN   \n",
        "\n",
-       "  incremental_txs_after_annualized_per_op  \n",
-       "0                                     nan  \n",
-       "1                                     nan  \n",
-       "2                                     nan  \n",
-       "3                                  0.7308  \n",
-       "4                                     nan  \n",
-       "5                                  0.3592  \n",
-       "6                                     nan  \n",
-       "7                                     nan  \n",
-       "8                                  0.4747  \n",
-       "9                                     nan  "
+       "   incremental_txs_after_annualized_per_op  \n",
+       "0                                      NaN  \n",
+       "1                                      NaN  \n",
+       "2                                      NaN  \n",
+       "3                                     0.73  \n",
+       "4                                      NaN  \n",
+       "5                                     0.36  \n",
+       "6                                      NaN  \n",
+       "7                                      NaN  \n",
+       "8                                     0.47  \n",
+       "9                                      NaN  "
       ]
      },
      "metadata": {},
@@ -1475,9 +1475,9 @@
        "      <td>1,100,000.00</td>\n",
        "      <td>791,082.00</td>\n",
        "      <td>4,110.26</td>\n",
-       "      <td>1.8964</td>\n",
+       "      <td>1.90</td>\n",
        "      <td>1,583.82</td>\n",
-       "      <td>0.7308</td>\n",
+       "      <td>0.73</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1485,9 +1485,9 @@
        "      <td>300,000.00</td>\n",
        "      <td>300,000.00</td>\n",
        "      <td>2,100.50</td>\n",
-       "      <td>2.5556</td>\n",
+       "      <td>2.56</td>\n",
        "      <td>390.16</td>\n",
-       "      <td>0.4747</td>\n",
+       "      <td>0.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1495,9 +1495,9 @@
        "      <td>240,000.00</td>\n",
        "      <td>240,839.00</td>\n",
        "      <td>217.56</td>\n",
-       "      <td>0.3297</td>\n",
+       "      <td>0.33</td>\n",
        "      <td>246.67</td>\n",
-       "      <td>0.3738</td>\n",
+       "      <td>0.37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1505,9 +1505,9 @@
        "      <td>5,000,000.00</td>\n",
        "      <td>4,820,781.00</td>\n",
        "      <td>3,122.79</td>\n",
-       "      <td>0.2364</td>\n",
+       "      <td>0.24</td>\n",
        "      <td>4,744.49</td>\n",
-       "      <td>0.3592</td>\n",
+       "      <td>0.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1515,9 +1515,9 @@
        "      <td>300,000.00</td>\n",
        "      <td>300,002.00</td>\n",
        "      <td>39.35</td>\n",
-       "      <td>0.0479</td>\n",
+       "      <td>0.05</td>\n",
        "      <td>12.07</td>\n",
-       "      <td>0.0147</td>\n",
+       "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1525,9 +1525,9 @@
        "      <td>900,000.00</td>\n",
        "      <td>900,002.00</td>\n",
        "      <td>7.83</td>\n",
-       "      <td>0.0032</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>-4.99</td>\n",
-       "      <td>-0.0020</td>\n",
+       "      <td>-0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1542,21 +1542,21 @@
        "4         WePiggy      300,000.00       300,002.00                    39.35   \n",
        "5           Aelin      900,000.00       900,002.00                     7.83   \n",
        "\n",
-       "  incremental_txs_annualized_per_op  incremental_txs_per_day_after  \\\n",
-       "0                            1.8964                       1,583.82   \n",
-       "1                            2.5556                         390.16   \n",
-       "2                            0.3297                         246.67   \n",
-       "3                            0.2364                       4,744.49   \n",
-       "4                            0.0479                          12.07   \n",
-       "5                            0.0032                          -4.99   \n",
+       "   incremental_txs_annualized_per_op  incremental_txs_per_day_after  \\\n",
+       "0                               1.90                       1,583.82   \n",
+       "1                               2.56                         390.16   \n",
+       "2                               0.33                         246.67   \n",
+       "3                               0.24                       4,744.49   \n",
+       "4                               0.05                          12.07   \n",
+       "5                               0.00                          -4.99   \n",
        "\n",
-       "  incremental_txs_after_annualized_per_op  \n",
-       "0                                  0.7308  \n",
-       "1                                  0.4747  \n",
-       "2                                  0.3738  \n",
-       "3                                  0.3592  \n",
-       "4                                  0.0147  \n",
-       "5                                 -0.0020  "
+       "   incremental_txs_after_annualized_per_op  \n",
+       "0                                     0.73  \n",
+       "1                                     0.47  \n",
+       "2                                     0.37  \n",
+       "3                                     0.36  \n",
+       "4                                     0.01  \n",
+       "5                                    -0.00  "
       ]
      },
      "metadata": {},
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1963,7 +1963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1982,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2167,7 +2167,6 @@
     "    result_app[\"op_source_length\"] > 1, [\"Multiple\"], result_app[\"op_source\"]\n",
     ")\n",
     "\n",
-    "# single programs\n",
     "result_source = result_app.groupby(\"op_source_map\").agg(agg_dict)\n",
     "\n",
     "# calculate metrics\n",
@@ -2185,91 +2184,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove any non growth projects from usage\n",
+    "# find out why the by source number is not correct also make it growth only!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>op_source_map</th>\n",
-       "      <th># OP Allocated</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Multiple</td>\n",
-       "      <td>9,450,000.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>['Partner Fund']</td>\n",
-       "      <td>5,000,000.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>['Phase 0']</td>\n",
-       "      <td>31,200,000.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>['Season 1']</td>\n",
-       "      <td>4,500,000.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>['Season 2']</td>\n",
-       "      <td>2,464,069.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      op_source_map  # OP Allocated\n",
-       "0          Multiple    9,450,000.00\n",
-       "1  ['Partner Fund']    5,000,000.00\n",
-       "2       ['Phase 0']   31,200,000.00\n",
-       "3      ['Season 1']    4,500,000.00\n",
-       "4      ['Season 2']    2,464,069.00"
+       "(38, 55)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# remove any non growth projects from usage\n",
-    "# find out why the by source number is not correct also make it growth only!\n",
-    "\n",
-    "result_app.groupby(\"op_source_map\").sum()[\"# OP Allocated\"].reset_index()"
+    "result_app[\"op_source_length\"] = result_app[\"op_source\"].str.split(\",\").apply(len)\n",
+    "result_app[\"op_source_map\"] = np.where(\n",
+    "    result_app[\"op_source_length\"] > 1, [\"Multiple\"], result_app[\"op_source\"]\n",
+    ")\n",
+    "result_app[result_app[\"op_source_length\"] == 1].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# # convert result_app to csv\n",
+    "# result_app.to_csv('result_app.csv')"
+   ]
   }
  ],
  "metadata": {
