--- a/op_rewards_tracking/pull_dune_data.ipynb
+++ b/op_rewards_tracking/pull_dune_data.ipynb
@@ -7,10 +7,10 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "import os\n",
-    "import duneapi_utils as d\n",
     "\n",
-    "sys.path.append(\"../helper_functions\")"
+    "sys.path.append(\"../helper_functions\")\n",
+    "import os\n",
+    "import duneapi_utils as d"
    ]
   },
   {
@@ -23,8 +23,8 @@
     "data = {\n",
     "    1886707: \"dune_op_distribution_type\",\n",
     "    1900056: \"dune_op_distribution\",\n",
-    "    2199844: \"dune_usage_by_app\"\n",
-    "    2195796: \"dune_op_program_performance_summary\"\n",
+    "    2199844: \"dune_usage_by_app\",\n",
+    "    2195796: \"dune_op_program_performance_summary\",\n",
     "}"
    ]
   },
@@ -34,8 +34,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not os.path.exists(\"csv_outputs\"):\n",
-    "    os.mkdir(\"csv_outputs\")\n",
     "for query_id, csv_name in data.items():\n",
     "    d.get_dune_data(query_id, csv_name)"
    ]
