--- a/op_rewards_tracking/op_incentive_program_summary.ipynb
+++ b/op_rewards_tracking/op_incentive_program_summary.ipynb
@@ -1019,7 +1019,10 @@
     ")\n",
     "\n",
     "# filter to incentive / growth programs only\n",
-    "df_choice = df_choice[df_choice[\"Incentive / Growth Program Included?\"] == \"Yes\"]"
+    "condition = (df_choice[\"Incentive / Growth Program Included?\"] == \"Yes\") & (\n",
+    "    df_choice[\"start_date\"].notnull()\n",
+    ")\n",
+    "df_choice = df_choice[condition]"
    ]
   },
   {
@@ -1326,7 +1329,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Rubicon</td>\n",
-       "      <td>1,100,000.00</td>\n",
+       "      <td>900,000.00</td>\n",
        "      <td>791,082.00</td>\n",
        "      <td>4,110.26</td>\n",
        "      <td>1.90</td>\n",
@@ -1402,7 +1405,7 @@
        "0      Velodrome    7,000,000.00     5,054,767.00                 8,045.35   \n",
        "1        Uniswap    1,000,000.00       150,001.00                 5,666.34   \n",
        "2  Pika Protocol      900,000.00       672,632.00                 4,781.95   \n",
-       "3        Rubicon    1,100,000.00       791,082.00                 4,110.26   \n",
+       "3        Rubicon      900,000.00       791,082.00                 4,110.26   \n",
        "4      Synthetix    9,000,000.00     4,919,425.00                 4,092.16   \n",
        "5           Aave    5,000,000.00     4,820,781.00                 3,122.79   \n",
        "6   Hop Protocol    1,000,000.00       152,602.00                 3,003.30   \n",
@@ -1472,7 +1475,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Rubicon</td>\n",
-       "      <td>1,100,000.00</td>\n",
+       "      <td>900,000.00</td>\n",
        "      <td>791,082.00</td>\n",
        "      <td>4,110.26</td>\n",
        "      <td>1.90</td>\n",
@@ -1535,7 +1538,7 @@
       ],
       "text/plain": [
        "         app_name  # OP Allocated  net_op_deployed  incremental_txs_per_day  \\\n",
-       "0         Rubicon    1,100,000.00       791,082.00                 4,110.26   \n",
+       "0         Rubicon      900,000.00       791,082.00                 4,110.26   \n",
        "1           1inch      300,000.00       300,000.00                 2,100.50   \n",
        "2  Revert Finance      240,000.00       240,839.00                   217.56   \n",
        "3            Aave    5,000,000.00     4,820,781.00                 3,122.79   \n",
@@ -1692,7 +1695,7 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Rubicon</td>\n",
-       "      <td>1,100,000.00</td>\n",
+       "      <td>900,000.00</td>\n",
        "      <td>791,082.00</td>\n",
        "      <td>3.96</td>\n",
        "      <td>0.0018</td>\n",
@@ -1741,7 +1744,7 @@
        "3           Uniswap    1,000,000.00       150,001.00   \n",
        "4       Beethoven X      500,000.00       164,703.00   \n",
        "5              Aave    5,000,000.00     4,820,781.00   \n",
-       "6           Rubicon    1,100,000.00       791,082.00   \n",
+       "6           Rubicon      900,000.00       791,082.00   \n",
        "7             QiDao      750,000.00       342,865.00   \n",
        "8  Stargate Finance    1,000,000.00       469,725.00   \n",
        "9             1inch      300,000.00       300,000.00   \n",
@@ -1820,7 +1823,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Rubicon</td>\n",
-       "      <td>1,100,000.00</td>\n",
+       "      <td>900,000.00</td>\n",
        "      <td>791,082.00</td>\n",
        "      <td>3.96</td>\n",
        "      <td>0.0018</td>\n",
@@ -1883,7 +1886,7 @@
       ],
       "text/plain": [
        "         app_name  # OP Allocated  net_op_deployed  \\\n",
-       "0         Rubicon    1,100,000.00       791,082.00   \n",
+       "0         Rubicon      900,000.00       791,082.00   \n",
        "1            Aave    5,000,000.00     4,820,781.00   \n",
        "2  Revert Finance      240,000.00       240,839.00   \n",
        "3         WePiggy      300,000.00       300,002.00   \n",
@@ -2025,7 +2028,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Multiple</td>\n",
-       "      <td>9,450,000.00</td>\n",
+       "      <td>8,900,000.00</td>\n",
        "      <td>6,946,246.00</td>\n",
        "      <td>10,700.99</td>\n",
        "      <td>20.22</td>\n",
@@ -2057,7 +2060,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Phase 0</td>\n",
-       "      <td>31,200,000.00</td>\n",
+       "      <td>31,000,000.00</td>\n",
        "      <td>16,834,319.00</td>\n",
        "      <td>16,775.45</td>\n",
        "      <td>74.79</td>\n",
@@ -2108,9 +2111,9 @@
       ],
       "text/plain": [
        "  op_source_map  # OP Allocated  net_op_deployed  incremental_txs_per_day  \\\n",
-       "0      Multiple    9,450,000.00     6,946,246.00                10,700.99   \n",
+       "0      Multiple    8,900,000.00     6,946,246.00                10,700.99   \n",
        "1  Partner Fund    5,000,000.00     4,820,781.00                 4,125.73   \n",
-       "2       Phase 0   31,200,000.00    16,834,319.00                16,775.45   \n",
+       "2       Phase 0   31,000,000.00    16,834,319.00                16,775.45   \n",
        "3      Season 1    4,500,000.00     2,048,668.00                 3,378.48   \n",
        "4      Season 2    2,464,069.00       978,022.00                 1,213.58   \n",
        "\n",
@@ -2184,46 +2187,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# remove any non growth projects from usage\n",
-    "# find out why the by source number is not correct also make it growth only!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(38, 55)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result_app[\"op_source_length\"] = result_app[\"op_source\"].str.split(\",\").apply(len)\n",
-    "result_app[\"op_source_map\"] = np.where(\n",
-    "    result_app[\"op_source_length\"] > 1, [\"Multiple\"], result_app[\"op_source\"]\n",
-    ")\n",
-    "result_app[result_app[\"op_source_length\"] == 1].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # convert result_app to csv\n",
-    "# result_app.to_csv('result_app.csv')"
+    "# convert results to csv\n",
+    "result_app.to_csv(\"csv_outputs/final_incentive_program_summary_by_app.csv\")"
    ]
   }
  ],
