--- a/op_rewards_tracking/op_incentive_program_summary.ipynb
+++ b/op_rewards_tracking/op_incentive_program_summary.ipynb
@@ -1088,6 +1088,11 @@
     "    df_op_distribution_summary_app=df_op_distribution_summary_app,\n",
     ")\n",
     "\n",
+    "# # if op_deployed higher than op allocated, set to op allocated value\n",
+    "# mask = df_combined_app['op_deployed'] > df_combined_app['# OP Allocated']\n",
+    "# df_combined_app.loc[mask, 'op_deployed'] = df_combined_app.loc[mask, '# OP Allocated']\n",
+    "\n",
+    "\n",
     "# calculate metrics\n",
     "result_app = calculate_metrics(\n",
     "    df_combined_app, op=\"op_deployed\"\n",
@@ -1123,7 +1128,7 @@
        "      <th></th>\n",
        "      <th>app_name</th>\n",
        "      <th># OP Allocated</th>\n",
-       "      <th>net_op_deployed</th>\n",
+       "      <th>op_deployed</th>\n",
        "      <th>cumul_last_price_net_dollar_flow</th>\n",
        "      <th>net_tvl_per_op</th>\n",
        "    </tr>\n",
@@ -1133,7 +1138,7 @@
        "      <th>0</th>\n",
        "      <td>Velodrome</td>\n",
        "      <td>7,000,000.00</td>\n",
-       "      <td>5,054,767.00</td>\n",
+       "      <td>5,102,039.00</td>\n",
        "      <td>201,955,598.20</td>\n",
        "      <td>39.58</td>\n",
        "    </tr>\n",
@@ -1181,7 +1186,7 @@
        "      <th>6</th>\n",
        "      <td>Beethoven X</td>\n",
        "      <td>500,000.00</td>\n",
-       "      <td>164,703.00</td>\n",
+       "      <td>211,795.00</td>\n",
        "      <td>26,250,099.00</td>\n",
        "      <td>123.94</td>\n",
        "    </tr>\n",
@@ -1214,17 +1219,17 @@
        "</div>"
       ],
       "text/plain": [
-       "           app_name  # OP Allocated  net_op_deployed  \\\n",
-       "0         Velodrome    7,000,000.00     5,054,767.00   \n",
-       "1         Synthetix    9,000,000.00     4,919,425.00   \n",
-       "2              Aave    5,000,000.00     4,820,781.00   \n",
-       "3       Rocket Pool      600,000.00       205,002.00   \n",
-       "4     Beefy Finance      650,000.00       281,962.00   \n",
-       "5  Stargate Finance    1,000,000.00       469,725.00   \n",
-       "6       Beethoven X      500,000.00       164,703.00   \n",
-       "7      PoolTogether    1,000,000.00       842,488.00   \n",
-       "8     Pika Protocol      900,000.00       672,632.00   \n",
-       "9            dHedge      350,000.00       202,257.00   \n",
+       "           app_name  # OP Allocated  op_deployed  \\\n",
+       "0         Velodrome    7,000,000.00 5,102,039.00   \n",
+       "1         Synthetix    9,000,000.00 4,919,425.00   \n",
+       "2              Aave    5,000,000.00 4,820,781.00   \n",
+       "3       Rocket Pool      600,000.00   205,002.00   \n",
+       "4     Beefy Finance      650,000.00   281,962.00   \n",
+       "5  Stargate Finance    1,000,000.00   469,725.00   \n",
+       "6       Beethoven X      500,000.00   211,795.00   \n",
+       "7      PoolTogether    1,000,000.00   842,488.00   \n",
+       "8     Pika Protocol      900,000.00   672,632.00   \n",
+       "9            dHedge      350,000.00   202,257.00   \n",
        "\n",
        "   cumul_last_price_net_dollar_flow  net_tvl_per_op  \n",
        "0                    201,955,598.20           39.58  \n",
@@ -1248,7 +1253,7 @@
     "cols = [\n",
     "    \"app_name\",\n",
     "    \"# OP Allocated\",\n",
-    "    \"net_op_deployed\",\n",
+    "    \"op_deployed\",\n",
     "    \"cumul_last_price_net_dollar_flow\",\n",
     "    \"net_tvl_per_op\",\n",
     "]\n",
@@ -1288,7 +1293,7 @@
        "      <th></th>\n",
        "      <th>app_name</th>\n",
        "      <th># OP Allocated</th>\n",
-       "      <th>net_op_deployed</th>\n",
+       "      <th>op_deployed</th>\n",
        "      <th>incremental_txs_per_day</th>\n",
        "      <th>incremental_txs_annualized_per_op</th>\n",
        "      <th>incremental_txs_per_day_after</th>\n",
@@ -1300,7 +1305,7 @@
        "      <th>0</th>\n",
        "      <td>Velodrome</td>\n",
        "      <td>7,000,000.00</td>\n",
-       "      <td>5,054,767.00</td>\n",
+       "      <td>5,102,039.00</td>\n",
        "      <td>8,045.35</td>\n",
        "      <td>0.58</td>\n",
        "      <td>NaN</td>\n",
@@ -1370,7 +1375,7 @@
        "      <th>7</th>\n",
        "      <td>Beethoven X</td>\n",
        "      <td>500,000.00</td>\n",
-       "      <td>164,703.00</td>\n",
+       "      <td>211,795.00</td>\n",
        "      <td>2,297.19</td>\n",
        "      <td>3.96</td>\n",
        "      <td>NaN</td>\n",
@@ -1401,17 +1406,17 @@
        "</div>"
       ],
       "text/plain": [
-       "        app_name  # OP Allocated  net_op_deployed  incremental_txs_per_day  \\\n",
-       "0      Velodrome    7,000,000.00     5,054,767.00                 8,045.35   \n",
-       "1        Uniswap    1,000,000.00       150,001.00                 5,666.34   \n",
-       "2  Pika Protocol      900,000.00       672,632.00                 4,781.95   \n",
-       "3        Rubicon      900,000.00       791,082.00                 4,110.26   \n",
-       "4      Synthetix    9,000,000.00     4,919,425.00                 4,092.16   \n",
-       "5           Aave    5,000,000.00     4,820,781.00                 3,122.79   \n",
-       "6   Hop Protocol    1,000,000.00       152,602.00                 3,003.30   \n",
-       "7    Beethoven X      500,000.00       164,703.00                 2,297.19   \n",
-       "8          1inch      300,000.00       300,000.00                 2,100.50   \n",
-       "9   PoolTogether    1,000,000.00       842,488.00                 1,910.07   \n",
+       "        app_name  # OP Allocated  op_deployed  incremental_txs_per_day  \\\n",
+       "0      Velodrome    7,000,000.00 5,102,039.00                 8,045.35   \n",
+       "1        Uniswap    1,000,000.00   150,001.00                 5,666.34   \n",
+       "2  Pika Protocol      900,000.00   672,632.00                 4,781.95   \n",
+       "3        Rubicon      900,000.00   791,082.00                 4,110.26   \n",
+       "4      Synthetix    9,000,000.00 4,919,425.00                 4,092.16   \n",
+       "5           Aave    5,000,000.00 4,820,781.00                 3,122.79   \n",
+       "6   Hop Protocol    1,000,000.00   152,602.00                 3,003.30   \n",
+       "7    Beethoven X      500,000.00   211,795.00                 2,297.19   \n",
+       "8          1inch      300,000.00   300,000.00                 2,100.50   \n",
+       "9   PoolTogether    1,000,000.00   842,488.00                 1,910.07   \n",
        "\n",
        "   incremental_txs_annualized_per_op  incremental_txs_per_day_after  \\\n",
        "0                               0.58                            NaN   \n",
@@ -1464,7 +1469,7 @@
        "      <th></th>\n",
        "      <th>app_name</th>\n",
        "      <th># OP Allocated</th>\n",
-       "      <th>net_op_deployed</th>\n",
+       "      <th>op_deployed</th>\n",
        "      <th>incremental_txs_per_day</th>\n",
        "      <th>incremental_txs_annualized_per_op</th>\n",
        "      <th>incremental_txs_per_day_after</th>\n",
@@ -1537,13 +1542,13 @@
        "</div>"
       ],
       "text/plain": [
-       "         app_name  # OP Allocated  net_op_deployed  incremental_txs_per_day  \\\n",
-       "0         Rubicon      900,000.00       791,082.00                 4,110.26   \n",
-       "1           1inch      300,000.00       300,000.00                 2,100.50   \n",
-       "2  Revert Finance      240,000.00       240,839.00                   217.56   \n",
-       "3            Aave    5,000,000.00     4,820,781.00                 3,122.79   \n",
-       "4         WePiggy      300,000.00       300,002.00                    39.35   \n",
-       "5           Aelin      900,000.00       900,002.00                     7.83   \n",
+       "         app_name  # OP Allocated  op_deployed  incremental_txs_per_day  \\\n",
+       "0         Rubicon      900,000.00   791,082.00                 4,110.26   \n",
+       "1           1inch      300,000.00   300,000.00                 2,100.50   \n",
+       "2  Revert Finance      240,000.00   240,839.00                   217.56   \n",
+       "3            Aave    5,000,000.00 4,820,781.00                 3,122.79   \n",
+       "4         WePiggy      300,000.00   300,002.00                    39.35   \n",
+       "5           Aelin      900,000.00   900,002.00                     7.83   \n",
        "\n",
        "   incremental_txs_annualized_per_op  incremental_txs_per_day_after  \\\n",
        "0                               1.90                       1,583.82   \n",
@@ -1571,7 +1576,7 @@
     "txs_cols = [\n",
     "    \"app_name\",\n",
     "    \"# OP Allocated\",\n",
-    "    \"net_op_deployed\",\n",
+    "    \"op_deployed\",\n",
     "    \"incremental_txs_per_day\",\n",
     "    \"incremental_txs_annualized_per_op\",\n",
     "    \"incremental_txs_per_day_after\",\n",
@@ -1624,7 +1629,7 @@
        "      <th></th>\n",
        "      <th>app_name</th>\n",
        "      <th># OP Allocated</th>\n",
-       "      <th>net_op_deployed</th>\n",
+       "      <th>op_deployed</th>\n",
        "      <th>incremental_gas_fee_eth_per_day</th>\n",
        "      <th>incremental_gas_fee_eth_annualized_per_op</th>\n",
        "      <th>incremental_gas_fee_eth_per_day_after</th>\n",
@@ -1646,7 +1651,7 @@
        "      <th>1</th>\n",
        "      <td>Velodrome</td>\n",
        "      <td>7,000,000.00</td>\n",
-       "      <td>5,054,767.00</td>\n",
+       "      <td>5,102,039.00</td>\n",
        "      <td>19.45</td>\n",
        "      <td>0.0014</td>\n",
        "      <td>NaN</td>\n",
@@ -1676,7 +1681,7 @@
        "      <th>4</th>\n",
        "      <td>Beethoven X</td>\n",
        "      <td>500,000.00</td>\n",
-       "      <td>164,703.00</td>\n",
+       "      <td>211,795.00</td>\n",
        "      <td>4.64</td>\n",
        "      <td>0.0080</td>\n",
        "      <td>NaN</td>\n",
@@ -1706,7 +1711,7 @@
        "      <th>7</th>\n",
        "      <td>QiDao</td>\n",
        "      <td>750,000.00</td>\n",
-       "      <td>342,865.00</td>\n",
+       "      <td>343,765.00</td>\n",
        "      <td>3.48</td>\n",
        "      <td>0.0037</td>\n",
        "      <td>NaN</td>\n",
@@ -1737,17 +1742,17 @@
        "</div>"
       ],
       "text/plain": [
-       "           app_name  # OP Allocated  net_op_deployed  \\\n",
-       "0         Synthetix    9,000,000.00     4,919,425.00   \n",
-       "1         Velodrome    7,000,000.00     5,054,767.00   \n",
-       "2      Hop Protocol    1,000,000.00       152,602.00   \n",
-       "3           Uniswap    1,000,000.00       150,001.00   \n",
-       "4       Beethoven X      500,000.00       164,703.00   \n",
-       "5              Aave    5,000,000.00     4,820,781.00   \n",
-       "6           Rubicon      900,000.00       791,082.00   \n",
-       "7             QiDao      750,000.00       342,865.00   \n",
-       "8  Stargate Finance    1,000,000.00       469,725.00   \n",
-       "9             1inch      300,000.00       300,000.00   \n",
+       "           app_name  # OP Allocated  op_deployed  \\\n",
+       "0         Synthetix    9,000,000.00 4,919,425.00   \n",
+       "1         Velodrome    7,000,000.00 5,102,039.00   \n",
+       "2      Hop Protocol    1,000,000.00   152,602.00   \n",
+       "3           Uniswap    1,000,000.00   150,001.00   \n",
+       "4       Beethoven X      500,000.00   211,795.00   \n",
+       "5              Aave    5,000,000.00 4,820,781.00   \n",
+       "6           Rubicon      900,000.00   791,082.00   \n",
+       "7             QiDao      750,000.00   343,765.00   \n",
+       "8  Stargate Finance    1,000,000.00   469,725.00   \n",
+       "9             1inch      300,000.00   300,000.00   \n",
        "\n",
        "   incremental_gas_fee_eth_per_day incremental_gas_fee_eth_annualized_per_op  \\\n",
        "0                            55.36                                    0.0041   \n",
@@ -1812,7 +1817,7 @@
        "      <th></th>\n",
        "      <th>app_name</th>\n",
        "      <th># OP Allocated</th>\n",
-       "      <th>net_op_deployed</th>\n",
+       "      <th>op_deployed</th>\n",
        "      <th>incremental_gas_fee_eth_per_day</th>\n",
        "      <th>incremental_gas_fee_eth_annualized_per_op</th>\n",
        "      <th>incremental_gas_fee_eth_per_day_after</th>\n",
@@ -1885,13 +1890,13 @@
        "</div>"
       ],
       "text/plain": [
-       "         app_name  # OP Allocated  net_op_deployed  \\\n",
-       "0         Rubicon      900,000.00       791,082.00   \n",
-       "1            Aave    5,000,000.00     4,820,781.00   \n",
-       "2  Revert Finance      240,000.00       240,839.00   \n",
-       "3         WePiggy      300,000.00       300,002.00   \n",
-       "4           1inch      300,000.00       300,000.00   \n",
-       "5           Aelin      900,000.00       900,002.00   \n",
+       "         app_name  # OP Allocated  op_deployed  \\\n",
+       "0         Rubicon      900,000.00   791,082.00   \n",
+       "1            Aave    5,000,000.00 4,820,781.00   \n",
+       "2  Revert Finance      240,000.00   240,839.00   \n",
+       "3         WePiggy      300,000.00   300,002.00   \n",
+       "4           1inch      300,000.00   300,000.00   \n",
+       "5           Aelin      900,000.00   900,002.00   \n",
        "\n",
        "   incremental_gas_fee_eth_per_day incremental_gas_fee_eth_annualized_per_op  \\\n",
        "0                             3.96                                    0.0018   \n",
@@ -1927,7 +1932,7 @@
     "gas_cols = [\n",
     "    \"app_name\",\n",
     "    \"# OP Allocated\",\n",
-    "    \"net_op_deployed\",\n",
+    "    \"op_deployed\",\n",
     "    \"incremental_gas_fee_eth_per_day\",\n",
     "    \"incremental_gas_fee_eth_annualized_per_op\",\n",
     "    \"incremental_gas_fee_eth_per_day_after\",\n",
