add notion doc and pull latest data
Former-commit-id: c2c0e7d44eab4912ccedfc32af9a7ac50644b745

--- a/op_rewards_tracking/archive/test_single_protocol.ipynb
+++ b/op_rewards_tracking/archive/test_single_protocol.ipynb
@@ -7,13 +7,16 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('../helper_functions')\n",
+    "\n",
+    "sys.path.append(\"../helper_functions\")\n",
     "import subgraph_utils as subg\n",
     "import defillama_utils as dfl\n",
     "import pandas_utils as pu\n",
     "\n",
     "\n",
-    "header = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:71.0) Gecko/20100101 Firefox/71.0'}\n",
+    "header = {\n",
+    "    \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:71.0) Gecko/20100101 Firefox/71.0\"\n",
+    "}\n",
     "statuses = {x for x in range(100, 600)}\n",
     "statuses.remove(200)\n",
     "statuses.remove(429)"
@@ -25,8 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "protocol = 'arrakis-finance'\n",
-    "apistring = 'https://api.llama.fi/protocol/' + protocol\n"
+    "protocol = \"arrakis-finance\"\n",
+    "apistring = \"https://api.llama.fi/protocol/\" + protocol"
    ]
   },
   {
@@ -43,7 +46,7 @@
     }
    ],
    "source": [
-    "df = dfl.get_single_tvl(protocol, ['optimism'])\n",
+    "df = dfl.get_single_tvl(protocol, [\"optimism\"])\n",
     "\n",
     "display(df)"
    ]
