add ipy display

--- a/op_rewards_tracking/op_incentive_program_summary.ipynb
+++ b/op_rewards_tracking/op_incentive_program_summary.ipynb
@@ -12,6 +12,7 @@
     "from pandas.api.types import CategoricalDtype\n",
     "from datetime import datetime, timedelta\n",
     "from utils import format_number\n",
+    "from IPython.display import display #So that display is recognized in .py files\n",
     "\n",
     "from config import LAST_N_DAYS, COL_NAMES_TO_INCLUDE\n",
     "\n",
