--- a/op_rewards_tracking/op_incentives_program_attribution.ipynb
+++ b/op_rewards_tracking/op_incentives_program_attribution.ipynb
@@ -24,7 +24,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import datetime"
+    "import datetime\n",
+    "from IPython.display import display #So that display is recognized in .py files"
    ]
   },
   {
