--- a/op_rewards_tracking/optimism_incentives_app_net_flows.ipynb
+++ b/op_rewards_tracking/optimism_incentives_app_net_flows.ipynb
@@ -33,6 +33,7 @@
     "import os\n",
     "import time\n",
     "import sys\n",
+    "from IPython.display import display #So that display is recognized in .py files\n",
     "\n",
     "sys.path.append(\"../helper_functions\")\n",
     "import subgraph_utils as subg\n",
