--- a/op_rewards_tracking/pull_dune_data.ipynb
+++ b/op_rewards_tracking/pull_dune_data.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "from IPython.display import display #So that display is recognized in .py files\n",
     "\n",
     "sys.path.append(\"../helper_functions\")\n",
     "import os\n",
@@ -91,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
