--- a/value_locked_flows/total_app_net_flows_async.ipynb
+++ b/value_locked_flows/total_app_net_flows_async.ipynb
@@ -99,7 +99,7 @@
     "\n",
     "#merge back in\n",
     "df_df = pd.concat([df_df,df_df_shift])\n",
-    "\n",
+    "df_df_shift = [] #free up memory\n",
     "# print(df_df_all.dtypes)\n",
     "\n",
     "df_df = df_df[df_df['date'] <= pd.to_datetime(\"today\") ]\n",
@@ -108,8 +108,7 @@
     "df_df_all = df_df.groupby(['date','token','chain','protocol','name','category','parent_protocol']).sum(['usd_value','token_value'])\n",
     "\n",
     "\n",
-    "df_df = df_df.reset_index()\n",
-    "df_df_shift = []"
+    "df_df = df_df.reset_index()"
    ]
   },
   {
@@ -119,12 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# df_df_all = pd.concat(df_df_all)\n",
-    "# print(df_df_all[2])\n",
-    "print(\"done api\")\n",
-    "# display(df_df_all[df_df_all['protocol'] == 'velodrome'])\n",
-    "# display(df_df_all)"
+    "print(\"done api\")"
    ]
   },
   {
@@ -152,6 +146,7 @@
    "outputs": [],
    "source": [
     "data_df = df_df.copy()\n",
+    "df_df = [] # Free Up Memory\n",
     "data_df = data_df.sort_values(by='date')\n",
     "\n",
     "# price = usd value / num tokens\n",
@@ -206,9 +201,16 @@
     "latest_prices_df_prot_gt0 = latest_prices_df_prot_gt0.reset_index()\n",
     "\n",
     "prices_df = data_df[['chain','protocol','token']].drop_duplicates()\n",
+    "\n",
     "prices_df = prices_df.merge(latest_prices_df_prot,on=['token','chain','protocol'], how='left')\n",
+    "latest_prices_df_raw_prot = [] # Free up memory\n",
+    "\n",
     "prices_df = prices_df.merge(latest_prices_df,on=['token','chain'], how='left')\n",
+    "latest_prices_df = [] # Free up memory\n",
+    "\n",
     "prices_df = prices_df.merge(latest_prices_df_prot_gt0,on=['token','chain','protocol'], how='left')\n",
+    "latest_prices_df_prot_gt0 = [] # Free up memory\n",
+    "\n",
     "#Select the latest price we want in priority order\n",
     "prices_df['latest_price_usd'] = \\\n",
     "        prices_df['latest_price_usd_prot'].where(prices_df['latest_price_usd_prot'] > 0, \\\n",
@@ -221,7 +223,8 @@
     "prices_df = prices_df[~prices_df['latest_price_usd'].isna()]\n",
     "\n",
     "#Merge back in to the data dataframe\n",
-    "data_df = data_df.merge(prices_df,on=['token','chain','protocol'], how='left')"
+    "data_df = data_df.merge(prices_df,on=['token','chain','protocol'], how='left')\n",
+    "prices_df = [] #Free Up Memory"
    ]
   },
   {
@@ -269,6 +272,9 @@
     "# Get net flows by protocol\n",
     "\n",
     "netdf_df = data_df[['date','protocol','chain','name','category','parent_protocol','net_dollar_flow','usd_value','net_dollar_flow_latest_price']]\n",
+    "\n",
+    "data_df = [] #Free Up memory\n",
+    "\n",
     "netdf_df = netdf_df.fillna(0)\n",
     "netdf_df = netdf_df.sort_values(by='date',ascending=True)\n",
     "netdf_df = netdf_df.groupby(['date','protocol','chain','name','category','parent_protocol']).sum(['net_dollar_flow','usd_value','net_dollar_flow_latest_price']) ##agg by app\n",
