--- a/value_locked_flows/total_app_net_flows_async.ipynb
+++ b/value_locked_flows/total_app_net_flows_async.ipynb
@@ -235,6 +235,8 @@
    "outputs": [],
    "source": [
     "# Sort in date order\n",
+    "print(\"prices map done\")\n",
+    "\n",
     "data_df.sort_values(by='date',inplace=True)\n",
     "\n",
     "# get net token change\n",
@@ -386,7 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "print(\"starting chart outputs\")\n",
     "# display(summary_df)\n",
     "for i in drange:\n",
     "        fig = ''\n",
